feat: merchant list reviews
